# ffmpeg-demo

./: .gitigore  README.md
cppcommon/: CLog.c  CLog.h  CodecUtil.c  CodecUtil.h  Common.h
cppsrc/: AudioVolume.cpp  AudioVolume.hpp  Cut.cpp  Cut.hpp  HardEnDecoder.cpp  HardEnDecoder.hpp  HttpsTest.cpp  HttpsTest.hpp  Merge.cpp  Merge.hpp  MultiThread.cpp  MultiThread.hpp  SoftEnDecoder.cpp  SoftEnDecoder.hpp  SpeedSlow.cpp  SpeedSlow.hpp  Subtitles.cpp  Subtitles.hpp  VideoJpg.cpp  VideoJpg.hpp  VideoScale.cpp  VideoScale.hpp  audio_acrossfade.cpp  audio_acrossfade.hpp  audio_encode.cpp  audio_encode.hpp  audio_resample.cpp  audio_resample.hpp  demuxer.cpp  demuxer.hpp  encodeMuxer.cpp  encodeMuxer.hpp  muxer.cpp  muxer.hpp  transcode.cpp  transcode.hpp  videoresample.cpp  videoresample.hpp
demo-android/app/: CMakeLists.txt  build.gradle
demo-android/app/src/androidTest/java/com/example/demo/: ExampleInstrumentedTest.java
demo-android/app/src/main/: AndroidManifest.xml
demo-android/app/src/main/cpp/: ad_opensl_es.cpp  ffmpeg_demo.cpp
demo-android/app/src/main/cpp/ffmpeg/libavutil/: ffversion.h
demo-android/app/src/main/cpp/opensles/: OpenSLESContext.cpp  OpenSLESContext.h  SLAudioPlayer.cpp  SLAudioPlayer.h  openslutil.cpp  openslutil.h  readme.md
demo-android/app/src/main/java/com/example/demo/: FFmpegActivity.java  MainActivity.java  MediaApplication.java  OpenSLESActivity.java
demo-android/app/src/main/java/com/example/demo/Audio/: ADAudioMediaPlayer.java  ADAudioTrackPlayer.java  ADOpenSLES.java  AudioPlayInterface.java
demo-android/app/src/main/java/com/example/demo/Common/: ADAssetsManager.java  ByteUtil.java  DDlog.java  PathTool.java
demo-android/app/src/main/java/com/example/demo/FFmpegTest/: FFmpegTest.java
demo-android/app/src/main/res/layout/: activity_ffmpeg.xml  activity_main.xml  activity_opensles.xml
demo-android/app/src/main/res/values/: arrays.xml  strings.xml
ffmpeglib/: config.asm  (+1 more)
(+116 files in other folders)
